# lescan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test.sffx
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: app_build_release.yml  book_build_release.yml
lescan/: Cargo.toml
lescan-book/: book.toml
lescan-book/src/: 00-introduction.md  01-installation.md  SUMMARY.md
lescan/locales/: about.yml  balloon_types.yml  dialog_windows.yml  errors.yml  footer.yml  image_tab_bar.yml  menu_bar.yml  pane_grid.yml  settings_menu.yml  text_editors.yml
lescan/src/: app_cache.rs  main.rs  message.rs  settings.rs
lescan/src/app/: mod.rs
lescan/src/app/modals/: about.rs  mod.rs  settings.rs
lescan/src/app/widgets/: balloons_table.rs  document_img_viewer.rs  main_content.rs  mod.rs  top_menu.rs
lescan/src/utils/: bln.rs  dialog_windows.rs  handlers.rs  mod.rs  panes.rs  tabs.rs
rsff/: .gitignore  Cargo.toml  README.md  run_tests  run_tests.cmd  uwu.json
rsff/benches/: document_benches.rs
rsff/src/: balloon.rs  consts.rs  docx_handlers.rs  img_data.rs  lib.rs  serde_overwrites.rs
src/: app.rs  balloons_table.rs  bln.rs  footer.rs  main.rs  message.rs  tinput.rs
src/app/: mod.rs
src/app/widgets/: balloons_table.rs  document_img_viewer.rs  main_content.rs  mod.rs
src/utils/: bln.rs  handlers.rs
