[package]
name = "iced_test"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["lazy", "image"] }
rsff = { path = "../rsff" }
iced_aw = "0.11"
rfd = "0.15.2"
rust-i18n = "3.1"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"

[target.'cfg(not(windows))'.dependencies]
clipboard-rs = { git = "https://github.com/ChurchTao/clipboard-rs.git" }
