[package]
name = "iced_test"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["lazy", "image", "markdown"] }
rsff = { path = "../rsff" }
iced_aw = "0.11"
rfd = "0.15.2"
rust-i18n = "3.1"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = ["parse", "display"] }
open = "5.3"
home = "0.5"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4"

[target.'cfg(not(windows))'.dependencies]
clipboard-rs = { git = "https://github.com/ChurchTao/clipboard-rs.git" }
