[package]
name = "rsff"
version = "0.1.0"
edition = "2021"
description = "Core library of an application designed to facilitate the work of teams translating content such as manga, manhwa, manhua, webtoons, etc."
authors = ["NandeMD"]
readme = "README.md"
repository = "https://github.com/NandeMD/rsff"
license-file = "LICENSE"
keywords = ["scanlation", "file", "webtoon", "manga", "manhwa"]
categories = ["parsing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.4"
flate2 = "1.0.28"
image = "0.24.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
docx-rs = "0.4"
docx-rust = "0.1"
tokio = { version = "1", default-features = false, features = [
    "fs",
    "io-util",
], optional = true }


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["async-io"]
async-io = ["dep:tokio"]